--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 		<!-- Tailwind CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
 		<script src="https://cdn.tailwindcss.com"></script>
+		
 	</head>
 
 	<body>
@@ -263,8 +264,9 @@
 				</div>
 		</section>
 		</div>
+		<script src="\Assets\js\script.js"></script>
+		<script src="\Assets\js\theme.js"></script>
 
-		<script src="assets/js/script.js"></script>
-		<script src="assets/js/theme.js"></script>
+		
 	</body>
 </html>
