--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
 				</div>
 		</section>
 		</div>
-		<script src="\Assets\js\script.js"></script>
-		<script src="\Assets\js\theme.js"></script>
+		<script src="/Assets/js/script.js"></script>
+		<script src="/Assets/js/theme.js"></script>
 
 		
 	</body>
