--- a/index.html
+++ b/index.html
@@ -28,27 +28,9 @@
 			property="og:description"
 			content="Steve Tom alias Raccoon254 - Graduate from Chuka University, specializing in Applied Computer Science. Experienced in YouTube, online courses, computer engineering, networking, Python, PHP, JavaScript, and Kotlin for Android Studio."
 		/>
-		<meta
-			property="og:image"
-			content="https://raccoon-porfolio-v2.vercel.app/assets/images/Raccoon254.jpeg"
-		/>
-		<meta property="og:url" content="https://stevetom.vercel.app" />
-		<meta property="og:type" content="website" />
-		<meta property="og:site_name" content="Raccoon254" />
+		
 
-		<!-- Twitter Card Meta Tags for Sharing Website Cards on Twitter -->
-		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:title" content="Raccoon254" />
-		<meta
-			name="twitter:description"
-			content="Steve Tom alias Raccoon254 - Graduate from Chuka University, specializing in Applied Computer Science. Experienced in YouTube, online courses, computer engineering, networking, Python, PHP, JavaScript, and Kotlin for Android Studio."
-		/>
-		<meta
-			name="twitter:image"
-			content="https://raccoon-porfolio-v2.vercel.app/assets/images/Raccoon254.jpeg"
-		/>
-		<meta name="twitter:creator" content="@Raccoon254" />
-
+		
 		<!-- External Stylesheets -->
 		<link
 			rel="stylesheet"
@@ -104,7 +86,7 @@
 					<div class="image-container">
 						<img
 							class="user-image"
-							src="\Assets\images\p1.jpg"
+							src="/Assets/images/p1.jpg"
 							alt="Shajahan"
 						/>
 					</div>
@@ -189,7 +171,7 @@
 				<h2 class="text-3xl font-bold mb-4">Projects</h2>
 				<div class="grid grid-cols-1 md:grid-cols-2 gap-6">
 						<div class="ring-1 ring-opacity-20 ring-gray-400 shadow-md rounded-lg overflow-hidden">
-								<img src="\Assets\images\project1.png" alt="Scholarspace.io" class="w-full h-48 object-cover"/>
+								<img src="/Assets/images/project1.png" alt="Scholarspace.io" class="w-full h-48 object-cover"/>
 								<div class="p-6">
 										<h3 class="text-xl font-semibold mb-2">AyurRasa</h3>
 										<p class="mb-4">Developed a web application using Streamlit that predicts primary and secondary rasas of herbs with 97% accuracy using KNN and SVM algorithms, based on parameters like sweet, sour, pungent, astringent, and bitter. Leveraged the Tanimoto coefficient for comparing similarities between known and unknown herbs.</p>
@@ -201,7 +183,7 @@
 						</div>
 						
 						<div class="ring-1 ring-opacity-20 ring-gray-400 shadow-md rounded-lg overflow-hidden">
-								<img src="\Assets\images\project2.png" alt="Project InternLink" class="w-full h-48 object-cover"/>
+								<img src="/Assets/images/project2.png" alt="Project InternLink" class="w-full h-48 object-cover"/>
 								<div class="p-6">
 										<h3 class="text-xl font-semibold mb-2">Smart Gas Trolley</h3>
 										<p class="mb-4">Developed a Smart Gas Trolley with gas leakage and fire alerts, integrated weight measurement, and a smart app for automatic gas booking and tracking. Generated comprehensive gas usage reports with Power BI and designed a 3D gas pipeline leakage prevention system using Blender.</p>
@@ -213,7 +195,7 @@
 						</div>
 
 						<div class="ring-1 ring-opacity-20 ring-gray-400 shadow-md rounded-lg overflow-hidden">
-								<img src="\Assets\images\project3.png" alt="FutureSpace" class="w-full h-48 object-cover"/>
+								<img src="/Assets/images/project3.png" alt="FutureSpace" class="w-full h-48 object-cover"/>
 								<div class="p-6">
 										<h3 class="text-xl font-semibold mb-2">Fashion Sales Dashboard</h3>
 										<p class="mb-4">Developed a Power BI sales dashboard for a clothing business, visualizing and analyzing sales trends and product performance across different locations. The dashboard effectively showcases past sales trends and insights.</p>
@@ -225,7 +207,7 @@
 						</div>
 
 						<div class="ring-1 ring-opacity-20 ring-gray-400 shadow-md rounded-lg overflow-hidden">
-								<img src="\Assets\images\project4.png" alt="Cline" class="w-full h-48 object-cover"/>
+								<img src="/Assets/images/project4.png" alt="Cline" class="w-full h-48 object-cover"/>
 								<div class="p-6">
 										<h3 class="text-xl font-semibold mb-2">Rasas of crude herbs and its constituents Dashboard</h3>
 										<p class="mb-4">Developed a Power BI dashboard to analyze the rasas of crude herbs and their constituents, such as Na, Mg, K, and various acids. The dashboard visualizes the chemical composition present in each rasa category—astringent, sweet, sour, bitter, and pungent—showing the percentage composition of each constituent within the rasas. This provides a detailed insight into the chemical makeup of herbs.</p>
