--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			integrity="sha512-..."
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="assets/css/style.css" />
+		<link rel="stylesheet" href="Assets/css/style.css" />
 
 		<!-- Tailwind CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
