--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 				<h2 class="text-3xl font-bold mb-4">About Me</h2>
 				<div class="ring-1 ring-opacity-20 ring-gray-400 shadow-md rounded-lg p-6">
 						<p class="mb-4">
-							Hello, A passionate tech enthusiast from CSE '25, I’m an SIH 2024 Winner 🏆 and Accenture Innovation Challenge Finalist 🏅. Fascinated by AI, ML, IoT, and data science 📊, I thrive on solving real-world problems. A nature explorer 🌿 at heart, I’m always learning, creating, and pushing boundaries to innovate. </p>
+							Hello,I am a passionate tech enthusiast from CSE '25, I’m an SIH 2024 Winner 🏆 and Accenture Innovation Challenge Finalist 🏅. Fascinated by AI, ML, IoT, and data science 📊, I thrive on solving real-world problems. A nature explorer 🌿 at heart, I’m always learning, creating, and pushing boundaries to innovate. </p>
 						
 						<h3 class="text-xl font-semibold mb-2">Skills</h3>
 						<div class="grid grid-cols-2 md:grid-cols-3 gap-4">
